More restrictive HTTP server settings

--- a/Local/www-service/httpd.conf
+++ b/Local/www-service/httpd.conf
@@ -30,13 +30,7 @@ PidFile /tmp/httpd.pid
 ServerName aftac1.jpl.nasa.gov
 
 # Port to Listen on - expect to override
-Listen 8080
-
-# In a basic setup httpd can only serve files from its document root
-DocumentRoot "/proj/exep/rhonda/Sandbox/HabEx"
-
-# Default file to serve
-DirectoryIndex index.html
+# Listen 8080
 
 # Errors go to their own log
 ErrorLog /tmp/error_log
@@ -45,6 +39,14 @@ ErrorLog /tmp/error_log
 LogFormat "%h %l %u %t \"%r\" %>s %b" common
 CustomLog /dev/null common
 
+# In a basic setup httpd can only serve files from its document root
+# Files are served from this root, but not all files below it can be
+# served.  See further restrictions below.
+DocumentRoot "/proj/exep/rhonda/Sandbox/Sandbox-dev"
+
+# Default file to serve
+DirectoryIndex index.html
+
 # Never change this block
 <Directory />
   AllowOverride None
@@ -52,8 +54,35 @@ CustomLog /dev/null common
 </Directory>
 
 # Allow documents to be served from the DocumentRoot
-#  follow symlinks might be unnecessary?
-<Directory /proj/exep/rhonda/Sandbox/HabEx>
-  Options FollowSymLinks
+#  (this is too generous...see below for dirs allowed)
+#<Directory /proj/exep/rhonda/Sandbox/HabEx>
+#  Options FollowSymLinks
+#</Directory>
+
+# Allow serving sims/*
+# Note: turned symlinks off.
+#   (tested/verified, 10/2020)
+<Directory /proj/exep/rhonda/Sandbox/Sandbox-dev/sims>
+  Options -FollowSymLinks
   Allow from all
 </Directory>
+
+# Allow serving Local/www-resources/*
+# Note: turned symlinks off.
+#   (tested/verified, 10/2020)
+<Directory /proj/exep/rhonda/Sandbox/Sandbox-dev/Local/www-resources>
+  Options -FollowSymLinks
+  Allow from all
+</Directory>
+
+# Disallow serving any files or dirs beginning with .
+# (e.g., .DS_Store, .git*)
+# (tested/verified, 10/2020)
+<FilesMatch "^\.(.*)$">
+    Order deny,allow
+    Deny from all
+</FilesMatch>
+<DirectoryMatch "/\.(.*)">
+    Order deny,allow
+    Deny from all
+</DirectoryMatch>
