--- a/Local/www-service/config/httpd-apache2.2.conf
+++ b/Local/www-service/config/httpd-apache2.2.conf
@@ -1,6 +1,7 @@
 # Apache httpd v2.2 minimal configuration
 #
 # adapted by turmon, 2018, for use as an Exosims result server
+# 2020, modified to restrict the files served
 
 # This can be reduced further if you remove the access log and mod_log_config
 ServerRoot "/etc/httpd"
@@ -15,7 +16,7 @@ LoadModule authz_host_module modules/mod_authz_host.so
 # set than all of mime.types.
 # TypesConfig conf/mime.types # (this was the original)
 TypesConfig /dev/null
-AddType text/html .html .htm
+AddType text/html .html
 AddType text/plain .txt .text .conf .log
 AddType text/csv .csv
 AddType text/css .css
@@ -42,7 +43,7 @@ CustomLog /dev/null common
 # In a basic setup httpd can only serve files from its document root
 # Files are served from this root, but not all files below it can be
 # served.  See further restrictions below.
-DocumentRoot "/proj/exep/rhonda/Sandbox/Sandbox-dev"
+DocumentRoot "/proj/exep/rhonda/Sandbox/HabEx"
 
 # Default file to serve
 DirectoryIndex index.html
@@ -62,7 +63,7 @@ DirectoryIndex index.html
 # Allow serving sims/*
 # Note: turned symlinks off.
 #   (tested/verified, 10/2020)
-<Directory /proj/exep/rhonda/Sandbox/Sandbox-dev/sims>
+<Directory /proj/exep/rhonda/Sandbox/HabEx/sims>
   Options -FollowSymLinks
   Allow from all
 </Directory>
@@ -70,7 +71,7 @@ DirectoryIndex index.html
 # Allow serving Local/www-resources/*
 # Note: turned symlinks off.
 #   (tested/verified, 10/2020)
-<Directory /proj/exep/rhonda/Sandbox/Sandbox-dev/Local/www-resources>
+<Directory /proj/exep/rhonda/Sandbox/HabEx/Local/www-resources>
   Options -FollowSymLinks
   Allow from all
 </Directory>
