--- a/Local/www-service/config/httpd-apache2.4.conf
+++ b/Local/www-service/config/httpd-apache2.4.conf
@@ -1,115 +1,119 @@
 # Apache httpd v2.4 minimal configuration
 #
+# 2022, full update for apache 2.4 Require directive
 # 2021, modified for httpd 2.4
 # 2020, modified to restrict the files served
 # adapted by turmon, 2018, for use as an Exosims result server
 
-# turmon TODO: might want to check if this is the best option for us
 # prefork MPM: Implements a non-threaded, pre-forking web server
 # See: http://httpd.apache.org/docs/2.4/mod/prefork.html
 LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
 
-# This can be reduced further if you remove the access log and mod_log_config
+# ServerRoot: The top of the directory tree under which the server's
+# configuration, error, and log files are kept. No trailing /.
 ServerRoot "/etc/httpd"
 
 # Minimum modules needed
 LoadModule log_config_module modules/mod_log_config.so
 LoadModule dir_module modules/mod_dir.so
-LoadModule rewrite_module modules/mod_rewrite.so
+# turmon 1/2022: commented out, disabled Rewrites for simplicity
+#LoadModule rewrite_module modules/mod_rewrite.so
 LoadModule mime_module modules/mod_mime.so
+# turmon: for host-based access restrictions, not needed at present
 LoadModule authz_host_module modules/mod_authz_host.so
-# turmon: FIXME, access_compat_module is for 2.2 compatibility but should be
-# updated to just use 2.4 directives.
-LoadModule access_compat_module modules/mod_access_compat.so
 # turmon: new for apache 2.4 (definitely needed)
 LoadModule unixd_module modules/mod_unixd.so
-# turmon: new for apache 2.4 (speculative)
+# turmon: new for apache 2.4 (for Require directives below)
 LoadModule authz_core_module modules/mod_authz_core.so
 
-# for URL-rewrite directives
-RewriteEngine  on
+# for URL-rewrite directives -- as above, commented out
+#<IfModule rewrite_module>
+#RewriteEngine  on
+#</IfModule>
 
 # What multimedia types to serve... a much more restricted
 # set than all of mime.types.
-# TypesConfig conf/mime.types # (this was the original)
-TypesConfig /dev/null
-AddType text/html .html
-AddType text/plain .txt .text .conf .log
-AddType text/csv .csv
-AddType text/css .css
-AddType application/javascript .js
-AddType video/mp4 .mp4
-#AddType video/ogg .ogv
-#AddType video/webm .webm
+<IfModule mime_module>
+  # TypesConfig conf/mime.types # (original)
+  TypesConfig /dev/null
+  AddType text/html .html
+  AddType text/plain .txt .text .conf .log
+  AddType text/csv .csv
+  AddType text/css .css
+  AddType application/javascript .js
+  AddType video/mp4 .mp4
+  AddType video/quicktime .mov
+  #AddType video/mpeg .mpeg .mpg
+  #AddType video/ogg .ogv
+  #AddType video/webm .webm
+</IfModule>
 
-# Expect to override
-PidFile /tmp/httpd.pid
+# turmon: 1/2022 commented out: the driver script fills this in,
+# and httpd will use DNS lookup to get it anyway.
+# Also, server name is not relevant b/c we are not using virtual hosts
+#ServerName mustang2.jpl.nasa.gov
 
-ServerName mustang2.jpl.nasa.gov
-
-# Port to Listen on - expect to override
+# port to listen on - expect to override
 # Listen 8080
 
-# Errors go to their own log - expect to override
-ErrorLog /tmp/error_log
+# server PID file - expect to override
+PidFile /tmp/httpd.pid
 
-# Access log - redirected to null
+# errors go to their own log - expect to override
+ErrorLog /tmp/error_log
+LogLevel notice
+
+# access log - redirected to null
 LogFormat "%h %l %u %t \"%r\" %>s %b" common
 CustomLog /dev/null common
 
 # In a basic setup httpd can only serve files from its document root
 # Files are served from this root, but not all files below it can be
-# served.  See further restrictions below.
+# served, see below.
 DocumentRoot "/proj/exep/rhonda/Sandbox/HabEx"
 
-# allow people to visit the naked URL and be directed to .../sims/
-RewriteRule "^/$" "/sims/"  [R]
-
-# Default file to serve
-DirectoryIndex index.html
-
-# Never change this block
+# Deny access to the entirety of your server's filesystem. You must
+# explicitly permit access to web content directories in other 
+# <Directory> blocks below.
 <Directory />
-  AllowOverride None
-  Deny from all
+  AllowOverride none
+  Require all denied
 </Directory>
 
-# Allow documents to be served from the DocumentRoot
-#  (this is too generous...see below for dirs allowed)
-#<Directory /proj/exep/rhonda/Sandbox/HabEx>
-#  Options FollowSymLinks
-#</Directory>
-
-# Allow serving sims/*
+# [1] Allow serving sims/*
 # Note: turned symlinks off.
 #   (tested/verified, 10/2020)
 <Directory /proj/exep/rhonda/Sandbox/HabEx/sims>
-
   Options -FollowSymLinks
-
-  Allow from all
-
+  Require all granted
 </Directory>
 
-# Allow serving Local/www-resources/*
+# [2] Allow serving Local/www-resources/*
+# Note: this does not include the logfiles, which are in .../www-service/...
 # Note: turned symlinks off.
-#   (tested/verified, 10/2020)
+#   (tested/verified, 1/2022)
 <Directory /proj/exep/rhonda/Sandbox/HabEx/Local/www-resources>
-
   Options -FollowSymLinks
-
-  Allow from all
-
+  Require all granted
 </Directory>
+
+# allow people to visit the naked URL and be directed to .../sims/
+# (this works, but it's disabled for now - turmon 1/2022)
+#<IfModule rewrite_module>
+#    RewriteRule "^/$" "/sims/"  [R]
+#</IfModule>
+
+# default file to serve for bare directories
+<IfModule dir_module>
+    DirectoryIndex index.html
+</IfModule>
 
 # Disallow serving any files or dirs beginning with .
-# (e.g., .DS_Store, .git*)
-# (tested/verified, 10/2020)
+# (e.g., .DS_Store, .git*, .htaccess)
+#   (tested/verified, 1/2022)
 <FilesMatch "^\.(.*)$">
-    Order deny,allow
-    Deny from all
+    Require all denied
 </FilesMatch>
 <DirectoryMatch "/\.(.*)">
-    Order deny,allow
-    Deny from all
+    Require all denied
 </DirectoryMatch>
