fix: made Analyses directory and excluded from git
Problem: No place for one-off analyses + results

Solution: They live in Analyses now

Testing:

Origin:

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # skip DRM output, graphics, csv's
 sims
 
+# skip focused analysis/experiments/results
+Analyses
+
 # skip EXOSIMS source code
 EXOSIMS
 
