force freshness check by httpd cache: kill cache bugs?

--- a/Local/www-service/config/httpd-apache2.4.conf
+++ b/Local/www-service/config/httpd-apache2.4.conf
@@ -16,6 +16,9 @@ ServerRoot "/etc/httpd"
 # Minimum modules needed
 LoadModule log_config_module modules/mod_log_config.so
 LoadModule dir_module modules/mod_dir.so
+# allow server to set html headers to control cache'ing
+# header rewrites controlled in: .htaccess
+LoadModule headers_module modules/mod_headers.so
 # turmon 1/2022: commented out, disabled Rewrites for simplicity
 #LoadModule rewrite_module modules/mod_rewrite.so
 LoadModule mime_module modules/mod_mime.so
@@ -117,3 +120,34 @@ DocumentRoot "/proj/exep/rhonda/Sandbox/HabEx"
 <DirectoryMatch "/\.(.*)">
     Require all denied
 </DirectoryMatch>
+
+# set headers to control cache'ing of files which are dynamically updated
+# verify these by retrieving headers via curl, e.g.:
+#   curl --head http://mustang2.jpl.nasa.gov:8090/sims/
+<IfModule mod_headers.c>
+    # re-use TCP connection to server
+    Header set Connection keep-alive
+    # ages are in seconds
+    # we don't serve these except for .ico perhaps - they are resources
+    <filesmatch "\.(ico|gif|eot|woff|otf|ttf|svg)$">
+        Header set Cache-Control "max-age=2592000, public"
+    </filesmatch>
+    # css and js should use private for proxy caching 
+    # https://developers.google.com/speed/docs/best-practices/caching#LeverageProxyCaching
+    <filesmatch "\.(css)$">
+        Header set Cache-Control "max-age=1209600, private"
+    </filesmatch>
+    <filesmatch "\.(js)$">
+        Header set Cache-Control "max-age=1209600, private"
+    </filesmatch>
+    # core results are JPEGs, PNGs, and HTML: they change dynamically
+    # no-cache is misleading, it means
+    # the browser must re-validate currency before using the cache
+    # (no-store means do not cache at all)
+    <filesmatch "\.(jpg|jpeg|png)$">
+        Header set Cache-Control "no-cache"
+    </filesmatch>
+    <filesmatch "\.(x?html)$">
+        Header set Cache-Control "no-cache"
+    </filesmatch>
+</IfModule>
