simplify cache parameters

--- a/Local/www-service/config/httpd-apache2.4.conf
+++ b/Local/www-service/config/httpd-apache2.4.conf
@@ -127,10 +127,10 @@ DocumentRoot "/proj/exep/rhonda/Sandbox/HabEx"
 <IfModule mod_headers.c>
     # re-use TCP connection to server
     Header set Connection keep-alive
-    # ages are in seconds
+    # ages are in seconds - 1209600 = 14 days
     # we don't serve these except for .ico perhaps - they are resources
     <filesmatch "\.(ico|gif|eot|woff|otf|ttf|svg)$">
-        Header set Cache-Control "max-age=2592000, public"
+        Header set Cache-Control "max-age=1209600, public"
     </filesmatch>
     # css and js should use private for proxy caching 
     # https://developers.google.com/speed/docs/best-practices/caching#LeverageProxyCaching
