cache parameter documentation

--- a/Local/www-service/config/httpd-apache2.4.conf
+++ b/Local/www-service/config/httpd-apache2.4.conf
@@ -122,6 +122,9 @@ DocumentRoot "/proj/exep/rhonda/Sandbox/HabEx"
 </DirectoryMatch>
 
 # set headers to control cache'ing of files which are dynamically updated
+# (jpg, png, html) - we want to force the browser to check their cached 
+# version of these files, because they are often updated dynamically.
+#
 # verify these by retrieving headers via curl, e.g.:
 #   curl --head http://mustang2.jpl.nasa.gov:8090/sims/
 <IfModule mod_headers.c>
