cache parameter documentation

--- a/Local/www-service/config/httpd-apache2.4.conf
+++ b/Local/www-service/config/httpd-apache2.4.conf
@@ -124,6 +124,7 @@ DocumentRoot "/proj/exep/rhonda/Sandbox/HabEx"
 # set headers to control cache'ing of files which are dynamically updated
 # (jpg, png, html) - we want to force the browser to check their cached 
 # version of these files, because they are often updated dynamically.
+# ref: https://jakearchibald.com/2016/caching-best-practices/
 #
 # verify these by retrieving headers via curl, e.g.:
 #   curl --head http://mustang2.jpl.nasa.gov:8090/sims/
