Enhance: allow one httpd.conf for both gattaca2/mustang2

--- a/Local/www-service/config/httpd-apache2.4.conf
+++ b/Local/www-service/config/httpd-apache2.4.conf
@@ -1,5 +1,9 @@
 # Apache httpd v2.4 minimal configuration
 #
+# Note: needs DOCUMENT_ROOT to be defined in calling environment,
+# this provides portability between systems.
+#
+# 2023, update for use with gattaca2 as well as s383 machines
 # 2022, full update for apache 2.4 Require directive
 # 2021, modified for httpd 2.4
 # 2020, modified to restrict the files served
@@ -19,8 +23,9 @@ LoadModule dir_module modules/mod_dir.so
 # allow server to set html headers to control cache'ing
 # header rewrites controlled in: .htaccess
 LoadModule headers_module modules/mod_headers.so
-# turmon 1/2022: commented out, disabled Rewrites for simplicity
-#LoadModule rewrite_module modules/mod_rewrite.so
+# turmon 11/2023: re-enable rewrites
+LoadModule rewrite_module modules/mod_rewrite.so
+# for png's, etc
 LoadModule mime_module modules/mod_mime.so
 # turmon: for host-based access restrictions, not needed at present
 LoadModule authz_host_module modules/mod_authz_host.so
@@ -29,10 +34,10 @@ LoadModule unixd_module modules/mod_unixd.so
 # turmon: new for apache 2.4 (for Require directives below)
 LoadModule authz_core_module modules/mod_authz_core.so
 
-# for URL-rewrite directives -- as above, commented out
-#<IfModule rewrite_module>
-#RewriteEngine  on
-#</IfModule>
+# for URL-rewrite directives
+<IfModule rewrite_module>
+  RewriteEngine  on
+</IfModule>
 
 # What multimedia types to serve... a much more restricted
 # set than all of mime.types.
@@ -54,6 +59,7 @@ LoadModule authz_core_module modules/mod_authz_core.so
 # turmon: 1/2022 commented out: the driver script fills this in,
 # and httpd will use DNS lookup to get it anyway.
 # Also, server name is not relevant b/c we are not using virtual hosts
+# Also (10/2023) we're now only serving to localhost
 #ServerName mustang2.jpl.nasa.gov
 
 # port to listen on - expect to override
@@ -73,38 +79,38 @@ CustomLog /dev/null common
 # In a basic setup httpd can only serve files from its document root
 # Files are served from this root, but not all files below it can be
 # served, see below.
-DocumentRoot "/proj/exep/rhonda/Sandbox/HabEx"
+DocumentRoot "${DOCUMENT_ROOT}"
 
-# Deny access to the entirety of your server's filesystem. You must
-# explicitly permit access to web content directories in other 
+# [0] Deny access to the entirety of the server's filesystem.
+# Must explicitly permit access to web content directories in other 
 # <Directory> blocks below.
 <Directory />
   AllowOverride none
   Require all denied
 </Directory>
 
-# [1] Allow serving sims/*
+# [1] visit the naked URL -> redirected to /sims/
+<IfModule rewrite_module>
+  RewriteRule "^$"  "/sims/"  [R]
+  RewriteRule "^/$" "/sims/"  [R]
+</IfModule>
+
+# [2] Allow serving sims/*
 # Note: turned symlinks off.
 #   (tested/verified, 10/2020)
-<Directory /proj/exep/rhonda/Sandbox/HabEx/sims>
+<Directory ${DOCUMENT_ROOT}/sims>
   Options -FollowSymLinks
   Require all granted
 </Directory>
 
-# [2] Allow serving Local/www-resources/*
+# [3] Allow serving Local/www-resources/*
 # Note: this does not include the logfiles, which are in .../www-service/...
 # Note: turned symlinks off.
 #   (tested/verified, 1/2022)
-<Directory /proj/exep/rhonda/Sandbox/HabEx/Local/www-resources>
+<Directory ${DOCUMENT_ROOT}/Local/www-resources>
   Options -FollowSymLinks
   Require all granted
 </Directory>
-
-# allow people to visit the naked URL and be directed to .../sims/
-# (this works, but it's disabled for now - turmon 1/2022)
-#<IfModule rewrite_module>
-#    RewriteRule "^/$" "/sims/"  [R]
-#</IfModule>
 
 # default file to serve for bare directories
 <IfModule dir_module>
