add XML to filetypes served

--- a/Local/www-service/config/httpd-apache2.4.conf
+++ b/Local/www-service/config/httpd-apache2.4.conf
@@ -41,6 +41,7 @@ LoadModule authz_core_module modules/mod_authz_core.so
 
 # What multimedia types to serve... a much more restricted
 # set than all of mime.types.
+# doc-generators use .xml files
 <IfModule mime_module>
   # TypesConfig conf/mime.types # (original)
   TypesConfig /dev/null
@@ -48,6 +49,7 @@ LoadModule authz_core_module modules/mod_authz_core.so
   AddType text/plain .txt .text .conf .log
   AddType text/csv .csv
   AddType text/css .css
+  AddType application/xml .xml
   AddType application/javascript .js
   AddType video/mp4 .mp4
   AddType video/quicktime .mov
