Feature: Full fix of apache/httpd on gattaca+mustang

--- a/Local/www-service/config/httpd-apache2.4_redhat.conf
+++ b/Local/www-service/config/httpd-apache2.4_redhat.conf
@@ -1,66 +1,62 @@
 # Apache httpd v2.4 minimal configuration
 #
-# Notes: for portability, these vars must be in the calling environment,
-# as they are used within this config file:
-#  DOCUMENT_ROOT: the root (/) of the HTML tree. No trailing /
-#  MODULE_ROOT: where modules are found (if non-empty, has trailing /)
+# Note: needs DOCUMENT_ROOT to be defined in calling environment,
+# this provides portability between systems.
 #
-# Upon invocation, these parameters are set (with -c "Name Value"):
-#   PidFile
-#   ErrorLog
-#   Listen
-#   DefaulRuntimeDir
-#   ServerName
-#
-# 2024, update for apache2 under ubuntu (formerly redhat)
 # 2023, update for use with gattaca2 as well as s383 machines
 # 2022, full update for apache 2.4 Require directive
 # 2021, modified for httpd 2.4
 # 2020, modified to restrict the files served
 # adapted by turmon, 2018, for use as an Exosims result server
 
-
-##
-## Modules
-##
-
-# Debian/Ubuntu apache2 prefers event_module (threaded, not forking)
-LoadModule mpm_event_module "${MODULE_ROOT}modules/mod_mpm_event.so"
-
-# Minimum modules needed
-# ubuntu:log_config_module is built-in and must not be loaded
-<IfModule !log_config_module>
-LoadModule log_config_module "${MODULE_ROOT}modules/mod_log_config.so"
-</IfModule>
-LoadModule dir_module "${MODULE_ROOT}modules/mod_dir.so"
-
-# allow server to set html headers to control cache'ing
-#   header rewrites controlled in: .htaccess
-LoadModule headers_module "${MODULE_ROOT}modules/mod_headers.so"
-# turmon 11/2023: enable rewrites (www re-directs)
-LoadModule rewrite_module "${MODULE_ROOT}modules/mod_rewrite.so"
-# support for png's, etc
-LoadModule mime_module "${MODULE_ROOT}modules/mod_mime.so"
-# turmon: for host-based access restrictions, not needed at present
-LoadModule authz_host_module "${MODULE_ROOT}modules/mod_authz_host.so"
-# turmon: for apache 2.4 (definitely needed)
-# (ubuntu: builtin)
-<IfModule !unixd_module>
-LoadModule unixd_module "${MODULE_ROOT}modules/mod_unixd.so"
-</IfModule>
-# turmon: new for apache 2.4 (for Require directives below)
-LoadModule authz_core_module "${MODULE_ROOT}modules/mod_authz_core.so"
-
-
-##
-## Basic config
-##
+# prefork MPM: Implements a non-threaded, pre-forking web server
+# See: http://httpd.apache.org/docs/2.4/mod/prefork.html
+LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
 
 # ServerRoot: The top of the directory tree under which the server's
 # configuration, error, and log files are kept. No trailing /.
-# (2024/07: seems unneeded)
-#ServerRoot "/etc/httpd"
-#ServerRoot "/etc/apache2"
+ServerRoot "/etc/httpd"
+
+# Minimum modules needed
+LoadModule log_config_module modules/mod_log_config.so
+LoadModule dir_module modules/mod_dir.so
+# allow server to set html headers to control cache'ing
+# header rewrites controlled in: .htaccess
+LoadModule headers_module modules/mod_headers.so
+# turmon 11/2023: re-enable rewrites
+LoadModule rewrite_module modules/mod_rewrite.so
+# for png's, etc
+LoadModule mime_module modules/mod_mime.so
+# turmon: for host-based access restrictions, not needed at present
+LoadModule authz_host_module modules/mod_authz_host.so
+# turmon: new for apache 2.4 (definitely needed)
+LoadModule unixd_module modules/mod_unixd.so
+# turmon: new for apache 2.4 (for Require directives below)
+LoadModule authz_core_module modules/mod_authz_core.so
+
+# for URL-rewrite directives
+<IfModule rewrite_module>
+  RewriteEngine  on
+</IfModule>
+
+# What multimedia types to serve... a much more restricted
+# set than all of mime.types.
+# doc-generators use .xml files
+<IfModule mime_module>
+  # TypesConfig conf/mime.types # (original)
+  TypesConfig /dev/null
+  AddType text/html .html
+  AddType text/plain .txt .text .conf .log
+  AddType text/csv .csv
+  AddType text/css .css
+  AddType application/xml .xml
+  AddType application/javascript .js
+  AddType video/mp4 .mp4
+  AddType video/quicktime .mov
+  #AddType video/mpeg .mpeg .mpg
+  #AddType video/ogg .ogv
+  #AddType video/webm .webm
+</IfModule>
 
 # turmon: 1/2022 commented out: the driver script fills this in,
 # and httpd will use DNS lookup to get it anyway.
@@ -68,8 +64,8 @@ LoadModule authz_core_module "${MODULE_ROOT}modules/mod_authz_core.so"
 # Also (10/2023) we're now only serving to localhost
 #ServerName mustang2.jpl.nasa.gov
 
-# port to listen on - will override
-# Listen 8090
+# port to listen on - expect to override
+# Listen 8080
 
 # server PID file - expect to override
 PidFile /tmp/httpd.pid
@@ -82,41 +78,7 @@ LogLevel notice
 LogFormat "%h %l %u %t \"%r\" %>s %b" common
 CustomLog /dev/null common
 
-
-##
-## Multimedia support
-##
-
-# What multimedia types to serve... a much more restricted
-# set than all of mime.types.
-<IfModule mime_module>
-  # TypesConfig conf/mime.types # (original)
-  TypesConfig /dev/null
-  AddType text/html .html
-  AddType text/plain .txt .text .conf .log
-  AddType text/csv .csv
-  AddType text/css .css
-  # doc-generators use .xml files
-  AddType application/xml .xml
-  AddType application/javascript .js
-  AddType video/mp4 .mp4
-  AddType video/quicktime .mov
-  #AddType video/mpeg .mpeg .mpg
-  #AddType video/ogg .ogv
-  #AddType video/webm .webm
-</IfModule>
-
-
-##
-## Access restrictions and file redirects
-##
-
-# enable URL-rewrite directives
-<IfModule rewrite_module>
-  RewriteEngine  on
-</IfModule>
-
-# basic httpd can only serve files from its document root
+# In a basic setup httpd can only serve files from its document root
 # Files are served from this root, but not all files below it can be
 # served, see below.
 DocumentRoot "${DOCUMENT_ROOT}"
@@ -166,32 +128,6 @@ DocumentRoot "${DOCUMENT_ROOT}"
 <DirectoryMatch "/\.(.*)">
     Require all denied
 </DirectoryMatch>
-
-
-##
-## Server process limits
-##
-
-# for event MPM
-# turmon: 
-#   2024-May: reduced the number of processes to lower sysadmin complaints
-#   2024-Jul: updated this for event MPM parameterization
-# See:
-#  https://httpd.apache.org/docs/2.4/mod/event.html (and the link to mpm_common)
-# ServerLimit: max number of server processes (what I need to limit)
-# MaxRequestWorkers: maximum number of worker threads
-# ThreadsPerChild: threads per server process
-# MaxRequestWorkers must be an integer multiple of ThreadsPerChild (=25 by default)
-<IfModule mpm_event_module>
-    ServerLimit           2
-    MaxRequestWorkers    60
-    ThreadsPerChild      30
-</IfModule>
-
-
-##
-## File cache control
-##
 
 # set headers to control cache'ing of files which are dynamically updated
 # (jpg, png, html) - we want to force the browser to check their cached 
