added warning on obsolete file

--- a/Local/www-service/config/httpd-apache2.4_redhat.conf
+++ b/Local/www-service/config/httpd-apache2.4_redhat.conf
@@ -1,5 +1,8 @@
 # Apache httpd v2.4 minimal configuration
 #
+# WARNING: this is a legacy config file, unused on
+# either gattaca2 or mustang*
+#
 # Note: needs DOCUMENT_ROOT to be defined in calling environment,
 # this provides portability between systems.
 #
