Enhance: support macOS sandbox

--- a/Local/www-service/config/httpd-apache2.4.conf
+++ b/Local/www-service/config/httpd-apache2.4.conf
@@ -25,31 +25,32 @@
 ##
 
 # Debian/Ubuntu apache2 prefers event_module (threaded, not forking)
-LoadModule mpm_event_module "${MODULE_ROOT}modules/mod_mpm_event.so"
+# (orig) LoadModule mpm_event_module "${MODULE_ROOT}mod_mpm_event.so"
+LoadModule mpm_event_module "${MODULE_ROOT}mod_mpm_event.so"
 
 # Minimum modules needed
 # ubuntu:log_config_module is built-in and must not be loaded
 <IfModule !log_config_module>
-LoadModule log_config_module "${MODULE_ROOT}modules/mod_log_config.so"
+LoadModule log_config_module "${MODULE_ROOT}mod_log_config.so"
 </IfModule>
-LoadModule dir_module "${MODULE_ROOT}modules/mod_dir.so"
+LoadModule dir_module "${MODULE_ROOT}mod_dir.so"
 
 # allow server to set html headers to control cache'ing
 #   header rewrites controlled in: .htaccess
-LoadModule headers_module "${MODULE_ROOT}modules/mod_headers.so"
+LoadModule headers_module "${MODULE_ROOT}mod_headers.so"
 # turmon 11/2023: enable rewrites (www re-directs)
-LoadModule rewrite_module "${MODULE_ROOT}modules/mod_rewrite.so"
+LoadModule rewrite_module "${MODULE_ROOT}mod_rewrite.so"
 # support for png's, etc
-LoadModule mime_module "${MODULE_ROOT}modules/mod_mime.so"
+LoadModule mime_module "${MODULE_ROOT}mod_mime.so"
 # turmon: for host-based access restrictions, not needed at present
-LoadModule authz_host_module "${MODULE_ROOT}modules/mod_authz_host.so"
+LoadModule authz_host_module "${MODULE_ROOT}mod_authz_host.so"
 # turmon: for apache 2.4 (definitely needed)
 # (ubuntu: builtin)
 <IfModule !unixd_module>
-LoadModule unixd_module "${MODULE_ROOT}modules/mod_unixd.so"
+LoadModule unixd_module "${MODULE_ROOT}mod_unixd.so"
 </IfModule>
 # turmon: new for apache 2.4 (for Require directives below)
-LoadModule authz_core_module "${MODULE_ROOT}modules/mod_authz_core.so"
+LoadModule authz_core_module "${MODULE_ROOT}mod_authz_core.so"
 
 
 ##
