Enhance: support README in Scripts/foo.fam, foo.exp

--- a/Local/www-service/config/httpd-apache2.4.conf
+++ b/Local/www-service/config/httpd-apache2.4.conf
@@ -94,7 +94,8 @@ CustomLog /dev/null common
   # TypesConfig conf/mime.types # (original)
   TypesConfig /dev/null
   AddType text/html .html
-  AddType text/plain .txt .text .conf .log
+  # serving markdown as text
+  AddType text/plain .txt .text .log .md
   AddType text/csv .csv
   AddType text/css .css
   # doc-generators use .xml files
