Add tabulator.js for Experiment html summaries

--- a/Local/www-service/config/httpd-apache2.4.conf
+++ b/Local/www-service/config/httpd-apache2.4.conf
@@ -219,13 +219,15 @@ DocumentRoot "${DOCUMENT_ROOT}"
         Header set Cache-Control "max-age=1209600, private"
     </filesmatch>
     # core results are JPEGs, PNGs, and HTML: they change dynamically
+    # more recently, .csv's and .json's are also dynamically updated
+    # also, .md's (markdown) are dynamically updated
     # no-cache is misleading, it means
     # the browser must re-validate currency before using the cache
     # (no-store means do not cache at all)
-    <filesmatch "\.(jpg|jpeg|png)$">
+    <filesmatch "\.(jpg|jpeg|png|csv|json|md)$">
         Header set Cache-Control "no-cache"
     </filesmatch>
-    <filesmatch "\.(x?html)$">
+    <filesmatch "\.(html|xhtml)$">
         Header set Cache-Control "no-cache"
     </filesmatch>
 </IfModule>
