httpd config tweak (failed try to help plotly .png download)

--- a/Local/www-service/config/httpd-apache2.4.conf
+++ b/Local/www-service/config/httpd-apache2.4.conf
@@ -103,6 +103,9 @@ CustomLog /dev/null common
   AddType application/javascript .js
   AddType video/mp4 .mp4
   AddType video/quicktime .mov
+  AddType image/png .png
+  AddType image/jpeg jpeg jpg
+  AddType application/pdf pdf
   #AddType video/mpeg .mpeg .mpg
   #AddType video/ogg .ogv
   #AddType video/webm .webm
